# sc8815-rs

./: .commitlintrc.yml  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  Makefile  PLAN.md  PROJECT_SUMMARY.md  README.md  lefthook.yml  package.json
.github/workflows/: build.yml  release.yml
docs/: PSTOP_SAFETY_GUIDE.md  SC8815.md
examples/stm32g0-charging/: Cargo.toml  Makefile  README.md
examples/stm32g0-charging/.cargo/: config.toml
examples/stm32g0-charging/src/: main.rs
examples/stm32g0-otg/: Cargo.toml  Makefile  README.md
examples/stm32g0-otg/.cargo/: config.toml
examples/stm32g0-otg/src/: main.rs
examples/stm32g0-sc8815-sw2303/: Cargo.toml  Makefile  README.md
examples/stm32g0-sc8815-sw2303/.cargo/: config.toml
examples/stm32g0-sc8815-sw2303/src/: main.rs
examples/stm32g4/: Cargo.toml  Makefile
examples/stm32g4/src/: main.rs
scripts/: select-probe.sh
src/: data_types.rs  driver.rs  error.rs  lib.rs  registers.rs
tests/: adc_calculations.rs  integration_tests.rs
