[package]
name = "sc8815"
version = "0.0.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "SC8815 power management IC driver for embedded systems with dual-mode operation, ADC support, and comprehensive configuration"
keywords = ["embedded-hal-driver", "no-std", "sc8815", "power-management", "battery-charging"]
repository = "https://github.com/IvanLi-CN/sc8815-rs"
categories = ["embedded", "hardware-support"]
readme = "README.md"
documentation = "https://docs.rs/sc8815"
homepage = "https://github.com/IvanLi-CN/sc8815-rs"

[dependencies]
embedded-hal = { version = "1.0.0", default-features = false }
embedded-hal-async = { version = "1.0.0", optional = true, default-features = false }
defmt = { version = "1.0.1", optional = true }
bitflags = "2.9"
maybe-async-cfg = "0.2.4"

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.0", features = ["macros", "rt"] }

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
